--- a/404.html
+++ b/404.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Redirecting...</title>
-  <script>
-    sessionStorage.redirect = location.pathname;
-    window.location.href = '/SCAN-Publications-Finder-React-API-page/';
-  </script>
-</head>
-<body>
-  <noscript>Please enable JavaScript to continue.</noscript>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Redirecting...</title>
+    <script>
+      const repoName = 'SCAN-Publications-Finder-React-API-page';
+      const path = window.location.pathname.split(repoName)[1] || '/';
+      window.location.href = `/${repoName}${path}`;
+    </script>
+  </head>
+  <body>
+    <noscript>Please enable JavaScript to continue.</noscript>
+  </body>
 </html>
